Default template for Mobile added

--- a/src/main/resources/conf/templates/templateWorkflows.xml
+++ b/src/main/resources/conf/templates/templateWorkflows.xml
@@ -1660,13 +1660,13 @@
 	<template id="74">
 		<workflow>
 			<parameter name="workorder.id" type="Number" />
-			<parameter name="workorder.assignedTo.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
 			<parameter name="workorder.subject" type="String" />
 			<parameter name="workorder.url" type="String" />
 			<expression name="workorder.id">
 				<constant>${workorder.id}</constant>
 			</expression>
-			<expression name="workorder.assignedTo.id">
+			<expression name="workorder.requestedBy.id">
 				<constant>${workorder.assignedTo.id}</constant>
 			</expression>
 			<expression name="workorder.subject">
@@ -1680,13 +1680,13 @@
 	<template id="75">
 		<workflow>
 			<parameter name="workorder.id" type="Number" />
-			<parameter name="workorder.assignedTo.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
 			<parameter name="workorder.subject" type="String" />
 			<parameter name="workorder.url" type="String" />
 			<expression name="workorder.id">
 				<constant>${workorder.id}</constant>
 			</expression>
-			<expression name="workorder.assignedTo.id">
+			<expression name="workorder.requestedBy.id">
 				<constant>${workorder.assignedTo.id}</constant>
 			</expression>
 			<expression name="workorder.subject">
@@ -1701,14 +1701,14 @@
 		<workflow>
 		   <parameter name="org.superAdmin.phone" type="String" />
 			<parameter name="workorder.id" type="Number" />
-			<parameter name="workorder.assignedTo.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
 			<parameter name="workorder.subject" type="String" />
 			<parameter name="workorder.url" type="String" />
 			<expression name="workorder.id">
 				<constant>${workorder.id}</constant>
 			</expression>
-			<expression name="workorder.assignedTo.id">
-				<constant>${workorder.assignedTo.id}</constant>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.requestedBy.id}</constant>
 			</expression>
 			<expression name="workorder.subject">
 				<constant>${workorder.subject}</constant>
@@ -1722,14 +1722,56 @@
 		<workflow>
 			<parameter name="org.superAdmin.phone" type="String" />
 			<parameter name="workorder.id" type="Number" />
-			<parameter name="workorder.assignedTo.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
 			<parameter name="workorder.subject" type="String" />
 			<parameter name="workorder.url" type="String" />
 			<expression name="workorder.id">
 				<constant>${workorder.id}</constant>
 			</expression>
-			<expression name="workorder.assignedTo.id">
-				<constant>${workorder.assignedTo.id}</constant>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.requestedBy.id}</constant>
+			</expression>
+			<expression name="workorder.subject">
+				<constant>${workorder.subject}</constant>
+			</expression>
+			<expression name="workorder.url">
+				<constant>${workorder.url}</constant>
+			</expression>
+		</workflow>
+	</template>
+	<template id="78">
+		<workflow>
+			<parameter name="org.superAdmin.phone" type="String" />
+			<parameter name="workorder.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
+			<parameter name="workorder.subject" type="String" />
+			<parameter name="workorder.url" type="String" />
+			<expression name="workorder.id">
+				<constant>${workorder.id}</constant>
+			</expression>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.requestedBy.id}</constant>
+			</expression>
+			<expression name="workorder.subject">
+				<constant>${workorder.subject}</constant>
+			</expression>
+			<expression name="workorder.url">
+				<constant>${workorder.url}</constant>
+			</expression>
+		</workflow>
+	</template>
+	<template id="79">
+		<workflow>
+			<parameter name="org.superAdmin.phone" type="String" />
+			<parameter name="workorder.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
+			<parameter name="workorder.subject" type="String" />
+			<parameter name="workorder.url" type="String" />
+			<expression name="workorder.id">
+				<constant>${workorder.id}</constant>
+			</expression>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.requestedBy.id}</constant>
 			</expression>
 			<expression name="workorder.subject">
 				<constant>${workorder.subject}</constant>
