Approvers default template

--- a/src/main/resources/conf/templates/templateWorkflows.xml
+++ b/src/main/resources/conf/templates/templateWorkflows.xml
@@ -1781,4 +1781,66 @@
 			</expression>
 		</workflow>
 	</template>
+	<template id="80">
+		<workflow>
+			<parameter name="workorder.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
+			<parameter name="workorder.subject" type="String" />
+			<parameter name="workorder.url" type="String" />
+			<expression name="workorder.id">
+				<constant>${workorder.id}</constant>
+			</expression>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.assignedTo.id}</constant>
+			</expression>
+			<expression name="workorder.subject">
+				<constant>${workorder.subject}</constant>
+			</expression>
+			<expression name="workorder.url">
+				<constant>${workorder.url}</constant>
+			</expression>
+		</workflow>
+	</template>
+	<template id="81">
+		<workflow>
+		   <parameter name="org.superAdmin.phone" type="String" />
+			<parameter name="workorder.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
+			<parameter name="workorder.subject" type="String" />
+			<parameter name="workorder.url" type="String" />
+			<expression name="workorder.id">
+				<constant>${workorder.id}</constant>
+			</expression>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.requestedBy.id}</constant>
+			</expression>
+			<expression name="workorder.subject">
+				<constant>${workorder.subject}</constant>
+			</expression>
+			<expression name="workorder.url">
+				<constant>${workorder.url}</constant>
+			</expression>
+		</workflow>
+	</template>
+	<template id="82">
+		<workflow>
+			<parameter name="org.superAdmin.phone" type="String" />
+			<parameter name="workorder.id" type="Number" />
+			<parameter name="workorder.requestedBy.id" type="Number" />
+			<parameter name="workorder.subject" type="String" />
+			<parameter name="workorder.url" type="String" />
+			<expression name="workorder.id">
+				<constant>${workorder.id}</constant>
+			</expression>
+			<expression name="workorder.requestedBy.id">
+				<constant>${workorder.requestedBy.id}</constant>
+			</expression>
+			<expression name="workorder.subject">
+				<constant>${workorder.subject}</constant>
+			</expression>
+			<expression name="workorder.url">
+				<constant>${workorder.url}</constant>
+			</expression>
+		</workflow>
+	</template>
 </workflows>
